[package]
name = "mtbinloader2"
version = "0.1.8"
edition = "2021"

[dependencies]
android_logger = { version = "0.14.1", default-features = false,optional = true }
clear-cache = { git = "https://github.com/mcbegamerxx954/clear-cache/", version = "0.1.1" }
ctor = "0.2.8"
cxx = "1.0.128"
libc = "0.2.159"
lightningscanner = "1.0.2"
log = "0.4.22"
materialbin = { git = "https://github.com/mcbegamerxx954/materialbin", version = "0.1.1", optional = true }
ndk = {version = "0.9.0", optional = true}
ndk-sys = "0.6.0"
patterns = {version = "0.2.5", optional = true}
plt-rs = "0.3.0"
region = "3.0.2"
scroll = {version = "0.12.0", optional = true}

[profile.release]
# This lib gets called from nowhere and so unwinding = crash
panic = "abort"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.1.24"

[features]
default = ["autofixing", "logging"]
autofixing = ["materialbin", "ndk", "scroll"]
logging = ["android_logger"]
# Decreases signature scanning time (for faster startup)
# You will need to use nightly rust for this feature
nightly = ["patterns"]
